--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,14 +1,34 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "CourseProject1"
+author: "Francisco Guzman"
+date: "9/28/2020"
+output: html_document
 ---
 
+## Global options and libraries
+
+```{r setup, include=FALSE}
+library(ggplot2)
+library(dplyr)
+
+Sys.setlocale("LC_TIME", "English")
+knitr::opts_chunk$set(warning=FALSE, echo = TRUE)
+```
 
 ## Loading and preprocessing the data
 
+```{r loadFile}
+setwd("~/Learning_R/ReprodResearch/Project1")
 
+zipDataFile <- "repdata_data_activity.zip"
+dataFile <- "activity.csv"
+
+if (!file.exists(dataFile) & file.exists(zipDataFile)) {
+    unzip (zipfile = zipDataFile)
+}
+
+activity <- read.csv("activity.csv", na.strings = "NA")
+```
 
 ## What is mean total number of steps taken per day?
 
