--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -27,19 +27,74 @@ if (!file.exists(dataFile) & file.exists(zipDataFile)) {
     unzip (zipfile = zipDataFile)
 }
 
+# 1. Load the data (i.e. read.csv())
 activity <- read.csv("activity.csv", na.strings = "NA")
+
+# 2. Process/transform the data (if necessary) into a format suitable for your analysis
+# activity <- transform(activity, date = as.Date(date))
 ```
 
 ## What is mean total number of steps taken per day?
 
+```{r avgStepsDay}
+# 1. Calculate the total number of steps taken per day
+total_steps <- aggregate(steps ~ date, activity, sum, na.rm = TRUE)
 
+# 2. Make a histogram of the total number of steps taken each day
+hist(total_steps$steps, breaks = 15, col = "green", labels = TRUE, ylim = c(0, 20), xlab = "Total Steps", ylab = "Frequency", main = "Total Number of Steps per Day")
+
+# 3. Calculate and report the mean and median of the total number of steps taken per day
+# 3.1 Steps mean
+mean(total_steps$steps)
+
+# 3.2 Steps median
+median(total_steps$steps)
+
+```
 
 ## What is the average daily activity pattern?
 
+```{r avgDailyActPattern}
+stepsIntervalMean <- aggregate(steps ~ interval, activity, mean, na.rm = TRUE)
 
+# 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) 
+#    and the average number of steps taken, averaged across all days (y-axis)
+plot(stepsIntervalMean$interval, stepsIntervalMean$steps, type = "l", main = "Average number of steps per 5-min interval", xlab = "Interval", ylab = "Average Steps")
+
+# 2. Which 5-minute interval, on average across all the days in the dataset, contains 
+#    the maximum number of steps?
+maxInterval <- stepsIntervalMean$interval[which(stepsIntervalMean$steps == max(stepsIntervalMean$steps))]
+maxInterval
+```
 
 ## Imputing missing values
 
+```{r missingData}
+# 1. Calculate and report the total number of missing values in the dataset 
+#    (i.e. the total number of rows with NA's)
+sum(is.na(activity))
 
+# 2. Devise a strategy for filling in all of the missing values in the dataset.
+#    Strategy: replace NA's by the mean of that 5 min interval
+
+#3. Create a new dataset that is equal to the original dataset but with the 
+#   missing data filled in.
+imputedData <- transform(activity, steps = ifelse(is.na(activity$steps), yes = imputed_steps, no = activity$steps))
+totalStepsImputed <- aggregate(steps ~ date, imputedData, sum)
+names(totalStepsImputed) <- c("date", "daily_steps")
+
+# 4. Make a histogram of the total number of steps taken each day and Calculate and report
+#    the mean and median total number of steps taken per day. Do these values differ from
+#    the estimates from the first part of the assignment? What is the impact of imputing
+#    missing data on the estimates of the total daily number of steps?
+
+hist(totalStepsImputed$daily_steps, col = "blue", labels = TRUE, xlab = "Total steps per day", ylim = c(0, 20), main = "Total number of steps taken each day", breaks = 15)
+
+# 4.1 Calculate and report the mean
+mean(totalStepsImputed$daily_steps)
+
+# 4.2 Calculate and report the median
+median (totalStepsImputed$daily_steps)
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
