--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "CourseProject1"
 author: "Francisco Guzman"
-date: "9/28/2020"
+date: "10/02/2020"
 output: html_document
 ---
 
@@ -55,42 +55,43 @@ median(total_steps$steps)
 ## What is the average daily activity pattern?
 
 ```{r avgDailyActPattern}
-stepsIntervalMean <- aggregate(steps ~ interval, activity, mean, na.rm = TRUE)
+avgDailyActivity <- aggregate(steps ~ interval, activity, mean, na.rm = TRUE)
 
-# 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) 
-#    and the average number of steps taken, averaged across all days (y-axis)
-plot(stepsIntervalMean$interval, stepsIntervalMean$steps, type = "l", main = "Average number of steps per 5-min interval", xlab = "Interval", ylab = "Average Steps")
+# 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+plot(avgDailyActivity$interval, avgDailyActivity$steps, type = "l", main = "Average number of steps per 5-min interval", xlab = "Interval", ylab = "Average Steps")
 
-# 2. Which 5-minute interval, on average across all the days in the dataset, contains 
-#    the maximum number of steps?
-maxInterval <- stepsIntervalMean$interval[which(stepsIntervalMean$steps == max(stepsIntervalMean$steps))]
-maxInterval
+# 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+print(avgDailyActivity$interval[which(avgDailyActivity$steps == max(avgDailyActivity$steps))])
+
 ```
 
 ## Imputing missing values
 
 ```{r missingData}
-# 1. Calculate and report the total number of missing values in the dataset 
-#    (i.e. the total number of rows with NA's)
-sum(is.na(activity))
+# 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NA's)
+NAIndex <- is.na(activity$steps)
+sum(NAIndex)
+
+# 2. Devise a strategy for filling in all of the missing values in the dataset. Strategy: replace NA's by the mean of that 5 min interval
+
 ```
 
-# 2. Devise a strategy for filling in all of the missing values in the dataset.
-#    Strategy: replace NA's by the mean of that 5 min interval
-
-# 3. Create a new dataset that is equal to the original dataset but with the 
-#   missing data filled in.
+# 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 
 ```{r imputedData}
-imputedData <- transform(activity, steps = ifelse(is.na(activity$steps), yes = imputed_steps, no = activity$steps))
+imputedData <- activity
+
+for (i in 1:length(imputedData$steps)) {
+  if (is.na(imputedData$steps[i])) {
+    imputedData$steps[i] <- avgDailyActivity$steps[avgDailyActivity$interval == imputedData$interval[i]]
+  }
+}
+
 totalStepsImputed <- aggregate(steps ~ date, imputedData, sum)
 names(totalStepsImputed) <- c("date", "daily_steps")
 ```
 
-# 4. Make a histogram of the total number of steps taken each day and Calculate and report
-#    the mean and median total number of steps taken per day. Do these values differ from
-#    the estimates from the first part of the assignment? What is the impact of imputing
-#    missing data on the estimates of the total daily number of steps?
+# 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
 ```{r newHistogram}
 hist(totalStepsImputed$daily_steps, col = "blue", labels = TRUE, xlab = "Total steps per day", ylim = c(0, 20), main = "Total number of steps taken each day", breaks = 15)
@@ -99,20 +100,26 @@ hist(totalStepsImputed$daily_steps, col = "blue", labels = TRUE, xlab = "Total s
 mean(totalStepsImputed$daily_steps)
 
 # 4.2 Calculate and report the median
-median (totalStepsImputed$daily_steps)
+median(totalStepsImputed$daily_steps)
 
 # A: mean and median values converge to the mean value in the 1st part of the assignment
 ```
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r dateTypes}
-# 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend”
-#    indicating whether a given date is a weekday or weekend day
-activityByDate <- aggregate(steps~interval + datetype, activity, mean, na.rm = TRUE)
+# 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day
+activity$date <- as.Date(strptime(activity$date, format="%Y-%m-%d"))
+activity$datetype <- sapply(activity$date, function(x) {
+        if (weekdays(x) == "Saturday" | weekdays(x) =="Sunday") 
+                {y <- "Weekend"}
+        else 
+                {y <- "Weekday"}
+                y
+        })
 
-# 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute
-#    interval (x-axis) and the average number of steps taken, averaged across all weekday
-#    days or weekend days (y-axis)
+activityByDate <- aggregate(steps ~ interval + datetype, activity, mean, na.rm = TRUE)
+
+# 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis)
 
 plot <- ggplot(activityByDate, aes(x = interval , y = steps, color = datetype)) +
        geom_line() +
